# JasonMou-256A03

./: .coverage  README.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
accounts/: forms.py  models.py  tests.py  views.py
accounts/management/commands/: seed_data.py
accounts/migrations/: 0001_initial.py  0002_remove_user_role_alter_user_email.py  0003_user_role.py  0004_alter_user_role.py
accounts/templates/accounts/: login.html  register.html
events/: forms.py  models.py  tests.py  urls.py  views.py
events/migrations/: 0001_initial.py
events/templates/events/: delete.html  detail.html  form.html  list.html
happy_camp/: settings.py  urls.py
happy_camp/static/css/: style.css
positions/: forms.py  models.py  tests.py  urls.py  views.py
positions/migrations/: 0001_initial.py
positions/templates/positions/: delete.html  form.html  list.html
reports/: tests.py  urls.py  views.py
reports/templates/reports/: all_events.html  event_people.html  my_events.html  upcoming.html  user_list.html
