[project]
name = "happy-camp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "djangorestframework>=3.17.1",
    "mysqlclient>=2.2.8",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest-django>=4.12.0",
]
